# dxcode

./: .auto-claude-status  .coderabbit.yaml  .env.atlas.example  .env.blazenetic.example  .env.example  .env.machine.example  .gitignore  .oxfmtrc.json  .t3work-additive-guard.json  AGENTS.md  ATTEMPTS.md  BUILD.md  CLAUDE.local.md  CONCRETE-EXAMPLE-FLOWS.md  CONTEXT.md  CURRENT-TASK.md  CUSTOMIZED.md  Cargo.toml  DONE.md  FEATURES.md  FORK-CHANGES.md  FORK.md  KEYBINDINGS.md  LICENSE  MOBILE_CONNECTION_RUNBOOK.md  PATCH.md  PLAN-RECIPES-SKILLS-TOOLS.md  PLAN.md  POWER_CONSUMPTION.md  PROVIDER-AGNOSTIC-FEATURES.md  README.md  REMOTE.md  SOURCE_CONTROL.md  SUBAGENTS.md  TODO.md  UPSTREAM_DIVERGENCE.md  docker-compose.atlas.yml  flake.nix  git-branches.json  knip.json  (+26 more)
.beads/: .beads-credential-key  metadata.json
.claude/: launch.json
.devcontainer/: devcontainer.json
.docs/: provider-architecture.md  subagent-worktrees.md  workspace-layout.md
.githooks/: pre-commit
.github/: VOUCHED.td
.plans/: 01-shared-model-normalization.md  02-typed-ipc-boundaries.md  03-split-codex-app-server-manager.md  04-split-chatview-component.md  07-ci-quality-gates.md  (+35 more)
crates/contracts/: Cargo.toml
crates/contracts/src/: export.rs  lib.rs  orchestration.rs  rpc.rs  server.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/src/: bridge.rs  commands.rs  main.rs  state.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  http.rs  lib.rs
crates/server/src/persistence/: migrations.rs  mod.rs  tests.rs
crates/server/src/persistence/sql/: 001_orchestration_events.sql  002_orchestration_command_receipts.sql  003_checkpoint_diff_blobs.sql  004_provider_session_runtime.sql  005_projections.sql  006_projection_thread_session_runtime_mode_columns.sql  007_projection_thread_message_attachments.sql  008_projection_thread_activity_sequence.sql  009_provider_session_runtime_mode.sql  010_projection_threads_runtime_mode.sql  011_orchestration_thread_created_runtime_mode.sql  012_projection_threads_interaction_mode.sql  013_projection_thread_proposed_plans.sql  014_projection_thread_proposed_plan_implementation.sql  015_projection_turns_source_proposed_plan.sql  016_canonicalize_model_selections.sql  017_projection_threads_archived_at.sql  018_projection_threads_archived_at_index.sql  019_projection_snapshot_lookup_indexes.sql
crates/server/src/ws/: mod.rs
(+4617 files in other folders)
