[workspace]
members = ["crates/contracts", "crates/desktop", "crates/server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.83"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = "0.10.1"
futures-util = "0.3.31"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.6.2" }
tauri-build = { version = "2.2.0" }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ts-rs = { version = "10.1.0", features = ["serde-json-impl"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
