[package]
name = "t3code-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
futures-util.workspace = true
http.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
t3code-contracts = { path = "../contracts" }

[dev-dependencies]
tempfile = "3.15.0"
tower = "0.5.2"
